# mama

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
dev/: build.sh  mavka.cpp  старт.м  ірк.м
src/: CMakeLists.txt  MaArgs.cpp  MaCell.cpp  MaFrame.h  MaInstruction.cpp  MaInstruction.h  MaMa.cpp  MaObject.h  MaScope.cpp  MaScope.h  MaValue.cpp  helpers.cpp  helpers.h  ma_call.cpp  ma_run.cpp  ma_take.cpp  mama.cpp  mama.h  takeFs.h
src/compiler/: compiler.cpp
src/compiler/nodes/: compile_assign_node.cpp  compile_binary_node.cpp  compile_break_node.cpp  compile_call_node.cpp  compile_continue_node.cpp  compile_dictionary_node.cpp  compile_diia_node.cpp  compile_give_node.cpp  compile_identifier_node.cpp  compile_if_node.cpp  compile_list_node.cpp  compile_module_node.cpp  compile_number_node.cpp  compile_property_get_node.cpp  compile_property_set_node.cpp  compile_return_node.cpp  compile_string_node.cpp  compile_structure_node.cpp  compile_take_node.cpp  compile_ternary_node.cpp  compile_test_node.cpp  compile_throw_node.cpp  compile_try_node.cpp  compile_unary_node.cpp  compile_while_node.cpp  diia.cpp
src/objects/: MaBytes.cpp  MaDict.cpp  MaDiia.cpp  MaList.cpp  MaLogical.cpp  MaModule.cpp  MaNumber.cpp  MaObject.cpp  MaScope.cpp  MaString.cpp  MaStructure.cpp  MaText.cpp
src/utils/: helpers.cpp  helpers.h
testing/: build.sh  mavka.cpp  test.sh  старт.м  х.м
testing/.паки/привіт/: м.м  привіт.м
